# CryptoScan

./: .gitignore  Cargo.toml  README.md  build.rs  layout1.glade
core_app/: Cargo.toml
core_app/src/blockchains/: binance.rs  fantom.rs  harmony.rs  huobi.rs  polygon.rs
src/: blockchains.rs  lib.rs  main.rs  ui.rs
src/api/: api.rs
src/blockchains/: binance.rs  cardano.rs  ethereum.rs  fantom.rs  harmony.rs  huobi.rs  polygon.rs  solana.rs  xdai.rs
