[package]
name = "crypdatrs"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
# cpp = "0.5.6"
# cpp_macros = "0.5.6"
fstrings = "0.2.3"
serde_json = "1.0.66"
ureq = "2.1.1"

# [build-dependencies]
# cpp_build = "0.5.6"
