[package]
name = "crypto_scan"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
relm4 = { version = "0.4", features = ["macros"] }
relm4-components = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.130", features = ["derive"]}
spinners = "2.0.0"
serde_json = "1.0.68"
tokio = { version = "1", features = ["full"] }
ureq = "2.2.0"
