[package]
name = "core_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
gtk4 = "0.4.7"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.130", features = ["derive"]}
spinners = "2.0.0"
serde_json = "1.0.68"
tokio = { version = "1", features = ["full"] }
ureq = "2.2.0"